--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,54 @@
-* {
-    font-family: Arial, Helvetica, sans-serif;
+
+body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: flex;
+    flex-direction: column;
+    margin:0;
+}
+
+.hero {
+    background: #1F2937;
+    color: #E5E7EB;
+    padding-left: 150px;
+    padding-right: 150px;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.herolower{
+    display: flex;
+    gap: 12px;
+    padding-bottom: 60px;
+}
+
+.main{
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: bolder;
+    margin: 0px;
+}
+
+#imageplaceholder{
+    flex-shrink: 0;
+    width: 500px;
+    height: 250px;
+    background: grey;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+#headerlogo {
+    font-size: 24px;
+}
+
+ul {
+    list-style: none;
+    display: flex;
+    gap: 12px;
 }
