--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,6 @@
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    display: flex;
-    flex-direction: column;
     margin:0;
 }
 
@@ -23,6 +21,7 @@ body {
     display: flex;
     gap: 12px;
     padding-bottom: 60px;
+    padding-top: 60px;
 }
 
 .main{
@@ -45,10 +44,39 @@ body {
 
 #headerlogo {
     font-size: 24px;
+    font-weight: bold;
 }
 
 ul {
     list-style: none;
     display: flex;
     gap: 12px;
+}
+
+.one {
+    text-align: center;
+    padding-left: 200px;
+    padding-right: 200px;
+
+}
+
+#randominfo {
+    font-weight: bolder;
+    font-size: 36px;
+    color: #1F2937;
+}
+
+.boxes {
+    display: flex;
+    font-size: 18px;
+    color: #1F2937;
+}
+
+
+
+.box{
+    height: 50px;
+    width: 50px;
+    border: 5px solid rgb(79, 158, 255);
+
 }
