--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,7 @@ ul {
     text-align: center;
     padding-left: 200px;
     padding-right: 200px;
+    padding-bottom: 100px;
 
 }
 
@@ -70,13 +71,21 @@ ul {
     display: flex;
     font-size: 18px;
     color: #1F2937;
+    gap: 20px;
+}
+
+.info{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
 
-
 .box{
-    height: 50px;
-    width: 50px;
+    height: 150px;
+    width: 150px;
     border: 5px solid rgb(79, 158, 255);
+    margin: auto;
+    border-radius: 15px;
 
 }
