--- a/styles.css
+++ b/styles.css
@@ -89,3 +89,13 @@ ul {
     border-radius: 15px;
 
 }
+
+.two{
+    background: #E5E7EB;
+    color: #1F2937;
+}
+
+.quote {
+    padding-left: 20%;
+    padding-right: 20%;
+}
